# pyHiM

./: .gitignore  .gitmodules  .md  .readthedocs.yaml  COPYRIGHT.txt  Dockerfile  HIMmatrixOperations.py  HiM_analysis20200813_135618.md  HiM_analysis20200813_135629.md  HiM_analysis20200903_150356.md  HiM_analysis20200922_152111.md  HiM_analysis20200922_153448.md  Installing_pyHiM.md  README.md  Running_pyHiM.md  Snakefile  __init__.py  alignBarcodesMasks.py  alignImages.py  bigfish  changeRT_infoList.py  cleanHiM_run.py  environment.yml  environment_cellpose.yml  evaluateStarDistPerformance.py  figure3wayInteractions.py  figure4Mmatrix.py  figureCompare2Matrices.py  figureHiMmatrix.py  figureN_HiMmatrices.py  fileManagement.py  folders2Load.json  imageProcessing.py  infoList.inf  infoList.json  installation.sh  localDriftCorrection.py  log.md  makeProjections.py  parameters.py  (+38 more)
docs/: AI_networks.md  Installing_pyHiM.md  Manual_installation_testing.md  Running_pyHiM.md  SingleCells.md  packaging_pyHiM.md  requirements.txt
docs/source/: conf.py  index.rst
figures/: figure3wayInteractions.py  figureCompare2Matrices.py  figureN_HiMmatrices.py
fileProcessing/: fileManagement.py  functionCaller.py  lndir.py
imageProcessing/: __init__.py  alignImages.py  imageProcessing.py  localDriftCorrection.py  makeProjections.py  projectsBarcodes.py  refitBarcodes3D.py  segmentMasks.py
infoListModels/: infoList_barcode.json  infoList_changeRT.sh
matrixOperations/: HIMmatrixOperations.py  alignBarcodesMasks.py  processHiMmatrix.py
modelParameterFiles_JSON/: Session_05082020_095220.json  Session_05082020_102536.json  Session_05082020_125337.json  alignImages.bed.json  folders2Load.json  folders2Load_4datasets.json  infoList.json  infoList_DAPI.json  infoList_RNA.json  infoList_barcode.json  infoList_fiducial.json  infoList_lab.json  infoList_mesoLR.json
napari-projection/: pyproject.toml  setup.cfg
napari-projection/napari_projection/: _widget.py  napari.yaml
notebooks/: Jupyter_functions_plots.py  full_pyHiM_run.ipynb  full_pyHiM_run_2D.ipynb
plots/: figure3wayInteractions.py  figure4Mmatrix.py  figureCompare2Matrices.py  figureHiMmatrix.py  figureN_HiMmatrices.py  figureSingleCell.py
src/: apifish  bigfish  createTestDataset.py  pyHiM.py  runAlignBarcodesMasks.py  runAlignImages.py  runAlignImages3D.py  runAppliesRegistrations.py  runLocalDriftCorrection.py  runMakeProjections.py  runProjectsBarcodes.py  runRefitBarcodes3D.py  runSegmentMasks.py  runSegmentSources3D.py  run_pyHiM_docker  trainStarDist.py
src/PyHiM_parameters/: infoList.json  infoList_model.json  info_parameters.py
src/api_him/: projection.py
src/core/: dask_cluster.py  data_file.py  data_manager.py  folder.py  function_caller.py  parameters.py  pyhim_logging.py  run_args.py  saving.py
src/depricated/: runAlignBarcodesMasks.py  runAppliesRegistrations.py  runMakeProjections.py  runSegmentSources3D.py  run_pyHiM_docker
src/fileProcessing/: changeRT_infoList.py  cleanHiM_run.py  fileManagement.py  functionCaller.py  lndir.py  pyHiM_parameters.py  runHiM_cluster.py  unzipHiM_run.py  zipHiM_run.py
src/imageProcessing/: __init__.py  alignImages.py  alignImages3D.py  correctsFocalDrift.py  imagePreProcessing.py  imageProcessing.py  imageSegmentSpots.py  localDriftCorrection.py  localization_table.py  localize_2d.py  localize_3d.py  makeProjections.py  mask_2d.py  mask_3d.py  projectsBarcodes.py  refitBarcodes3D.py  register_local.py  segmentMasks.py  segmentMasks3D.py  segmentSources3D.py  test_registration_by_optical_flow.py
src/matrixOperations/: HIMmatrixOperations.py  alignBarcodesMasks.py  build_matrix.py  build_traces.py  chromatin_trace_table.py  filter_localizations.py  register_localizations.py
src/parameter_file/: function_parameters.py  infoList_mesoLR.json  info_parameters.py  pyhim_parameters.py
src/plots/: figure3wayInteractions.py  figure4Mmatrix.py  figureCompare2Matrices.py  figureCompare2Matrices_fig3a.py  figureCompare2Matrices_figS1n_v3.py  figureHiMmatrix.py  figureN_HiMmatrices.py  figurePlotImageProfile.py  figureSingleCell.py  folders2Load.json  plot_bootstrapping.py  plotting_functions.py
src/postProcessing/: analyze_localizations.py  compare_PWD_matrices.py  folders2Load.json  mask_cellpose.py  mask_manual.py  npy_to_tiff.py  processHiMmatrix.py  processSNDchannel.py  process_segmentMasks3D.py  processingMutipleDatasets.py  pwd_matrix_2_pdb.py  trace_analyzer.py  trace_assign_mask.py  trace_combinator.py  trace_decoder.py  trace_filter.py  trace_filter_advanced.py  trace_filter_jb.py  trace_filter_simple.py  trace_merge.py  trace_plot.py  trace_selector.py  trace_to_matrix.py
src/toolbox/: imagePreProcessing.py  imageSegmentSpots.py  runHiM_cluster.py
testCode/: testImageAlignment.py  testLoadsROIs.py
tests/: Snakefile  TestStardist3DSourceSegmentation.py  aligns2images.m  analysisHiMmatrix.py  create_testDataJSON.py  evaluateStarDistPerformance.py  infoList_model.json  test3DAlignmentbyBlock.ipynb  test3DAlignmentbyBlock.py  test3DcrossCorrelation.ipynb  test3DcrossCorrelation.py  test3Dsegment.py  test3Dsegment_3Dgaussian.py  test3Dsegment_skimage.py  testAlignBarcodesMasks.py  testAlignCV2.py  testApplyParallel.py  testAstropy3D.py  testBigFish.py  testCUDA.py  testCompare2Dversus3Dlocalizations.py  testConvertFormatTrainingSets.py  testCorrectsDrift3D.py  testCorrectsDrift3Dclass.py  testDAPI3D.py  testDCIMG.py  testData.json  testDetectsNumberCycles.py  testDrawROIs.py  testFindFocalPlane.py  testFocalPlaneMatrix.py  testImageAlignment.py  testImageAlignment2.py  testImageProcess.py  testImportMatlab.py  testKDE.py  testLoadsROIs.py  testLocalAlignment.py  testLogging.py  testMasks3D.py  (+23 more)
tests/standardTests/: create_testDataJSON.py  infoList.json  testData.json  test_1_makeProjections.py  test_2_alignImages.py  test_3_appliesRegistrations.py  test_4_segmentsMasks.py  test_5_localDriftCorrection.py  test_6_refitBarcodes3D.py  test_7_processesPWDmatrices.py  test_alignImages.py  test_appliesRegistrations.py  test_importMatlab.py  test_makeProjections.py  (+2 more)
(+109 files in other folders)
