[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhim"
version = "0.6.5-alpha5"
description = "Pipeline and functions to analyse multiplexed DNA-FISH data"
readme = "README.md"
authors = [{ name = "Marcelo Nollmann", email = "marcelo.nollmann@cbs.cnrs.fr" }]
license = { file = "LICENSE" }
keywords = ["astropy",
              "csbdeep",
              "dask",
              "matplotlib",
              "numpy",
              "opencv-python",
              "numba",
              "photutils",
              "roipoly",
              "scikit-learn",
              "scikit-image",
              "stardist",
              "pympler",
              "tqdm",
              "scipy",
              "tifffile"
              ]
dependencies = ["apifish",
                "astropy >= 4.3.1",
                "csbdeep >= 0.6.3",
                "dask[distributed] >= 2021.10.0",
                "matplotlib >= 3.5.1",
                "numba >= 0.54.1",
                "numpy >= 1.19.5",
                "opencv-python >= 4.5.3.56",
                "photutils == 1.1.0",
                "pympler >= 1.0.1",
                "roipoly >= 0.5.3",
                "scikit-image >= 0.19.2",
                "scikit-learn >= 1.1.1",
                "scipy >= 1.7.3",
                "stardist >= 0.7.3",
                "tifffile >= 2021.10.10",
                "tqdm >= 4.63.0"
                ]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/marcnol/pyHiM"

[project.scripts]
pyhim = "pyHiM:main"
train_stardist = "trainStarDist:main"
change_rt_infolist = "changeRT_infoList:main"
clean_him_run = "cleanHiM_run:main"
lndir = "lndir:main"
run_him_cluster = "runHiM_cluster:main"
unzip_him_run = "unzipHiM_run:main"
zip_him_run = "zipHiM_run:main"
image_preprocessing = "imagePreProcessing:main"
image_segment_spots = "imageSegmentSpots:main"
figure_3_way_interactions = "figure3wayInteractions:main"
figure_4_m_matrix = "figure4Mmatrix:main"
figure_compare_2_matrices = "figureCompare2Matrices:main"
figure_him_matrix = "figureHiMmatrix:main"
figure_n_him_matrices = "figureN_HiMmatrices:main"
figure_single_cell = "figureSingleCell:main"
process_segment_masks_3d = "process_segmentMasks3D:main"
process_him_matrix = "processHiMmatrix:main"
process_snd_channel = "processSNDchannel:main"
trace_analyzer = "trace_analyzer:main"
trace_combinator = "trace_combinator:main"
trace_filter = "trace_filter:main"
trace_selector = "trace_selector:main"