[metadata]
name = napari-projection
version = 0.0.1
author = aaaa
author_email = aaa@gmail.com
url = https://github.com/aaa
license = BSD-3-Clause
description = Projection
long_description = Projection by sum or median
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =napari_projection

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy

[options.packages.find]
where = napari_projection

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-projection = napari_projection:napari.yaml
